# parking_system

./: .dockerignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
Parking/: admin.py  apps.py  models.py  urls.py  views.py
Parking/migrations/: 0001_initial.py  0002_remove_vehicle_info_checkin_time_and_more.py  0003_alter_parkingdetails_checkin_time.py  0004_alter_parkingdetails_checkin_time_and_more.py  0005_alter_parkingdetails_checkin_time_and_more.py  0006_vehicle_info_parked.py  0007_alter_parkingdetails_checkin_time.py
Praking_management/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
REST_API/: admin.py  apps.py  export_scripts.py  models.py  pagination.py  permissions.py  resources.py  serializer.py  tests.py  urls.py  views.py
REST_API/migrations/: 0001_initial.py  0002_initial.py  0003_alter_parkingspace_options.py
authUser/: admin.py  apps.py  models.py  serializer.py  tasks.py  tests.py  urls.py  views.py
authUser/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_email.py
templates/: ParkingDetails.html  ParkingSpaceForm.html  VehicleDashBoard.html  VehicleEdit.html  VehicleInfo.html  Vehicle_infoAdd.html  createParkingSpace.html  home.html  index.html  info.html  parkingspace.html
tests/: conftest.py  factories.py  tests.py
