[tool.poetry]
name = "parking-management-system"
version = "0.1.0"
description = ""
authors = ["krown12 <kcsajan272@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"
amqp = "5.2.0"
asgiref = "3.8.1"
async-timeout = "4.0.3"
billiard = "4.2.0"
celery = "5.4.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
django-filter = "24.2"
django-redis = "5.4.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-yasg = "1.21.7"
inflection = "0.5.1"
kombu = "5.3.7"
packaging = "24.1"
prompt-toolkit = "3.0.47"
pyjwt = "2.8.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.1"
redis = "5.0.7"
six = "1.16.0"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uritemplate = "4.1.1"
vine = "5.1.0"
wcwidth = "0.2.13"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
